--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div class="hand-selection">
-        <button id="rock">rock</button>
-        <button id="paper">paper</button>
-        <button id="scissors">scissors</button>
+        <button id="rock">🪨</button>
+        <button id="paper">🧻</button>
+        <button id="scissors">✂️</button>
     </div>
     <h1>Score</h1>
     <div class="scores">
